roles/talos/files/cilium/clusterwide-network-policy-node-healthcheck.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-node-healthchecks"
spec:
  description: "Allow node healthchecks"
  endpointSelector:
    matchLabels:
      "reserved:health": ""
  ingress:
  - fromEntities:
    - remote-node
