roles/talos/files/cilium/network-policy-namespace.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "kube-system-namespace"
  namespace: kube-system
spec:
  description: "kube-system namespace traffic policy"
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        {}
